--- a/src/resources/views/partials/adminSidebar.hbs
+++ b/src/resources/views/partials/adminSidebar.hbs
@@ -29,12 +29,20 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a href="/admin/post" class="nav-link"><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
-              class="pcoded-mtext">Quản lí bài đăng</span></a>
+          <a href="/admin/ordered" class="nav-link"><span class="pcoded-micon"><i
+                class="feather icon-box"></i></span><span class="pcoded-mtext">Quản lí đơn hàng</span></a>
         </li>
         <li class="nav-item">
           <a href="/admin/user" class="nav-link"><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
               class="pcoded-mtext">Quản lí tài khoản</span></a>
+        </li>
+        <li class="nav-item pcoded-hasmenu">
+          <a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
+              class="pcoded-mtext">Quản lý bài viết</span></a>
+          <ul class="pcoded-submenu">
+            <li class=""><a href="/admin/post/" class="">Tất cả bài viết</a></li>
+            <li class=""><a href="/admin/post/create/" class="">Thêm bài viết</a></li>
+          </ul>
         </li>
       </ul>
     </div>
