--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -33,7 +33,9 @@
               <span class="d-block ml-1">{{currentUser.username}}</span>
             </div>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Cài đặt tài khoản</a>
+              <a class="dropdown-item" href="/product/ordered">Đơn mua</a>
+              <hr class="my-1 d-block">
+              <a class="dropdown-item" href="/user">Cài đặt tài khoản</a>
               <a class="dropdown-item" href="/logout">Đăng xuất</a>
             </div>
             {{/if}}
@@ -56,8 +58,8 @@
             <div class="d-flex justify-content-center align-items-center w-100" id="search_bar" style="height:100px;">
               <div class="d-flex justify-content-end align-items-center w-100" style="height:100px;">
                 <div class="searchbar">
-                  <form>
-                    <input class="search_input" required type="text" name="search"
+                  <form action="/product/search" method="GET">
+                    <input id="search_input" class="search_input" required type="text" name="q"
                       placeholder="Nhập từ khóa cần tìm kiếm...">
                     <button type="submit" class="search_icon"><i class='bx bx-search-alt'></i></button>
                   </form>
@@ -85,15 +87,26 @@
   </nav>
   <nav id="pc_nav-cate" style="height:50px; background-color:rgb(245, 245, 245);">
     <ul class="d-flex justify-content-center align-items-center" style="height: 50px; list-style:none;">
-      <li class="px-4"><a class="text-dark no-under" href="/product">Tất cả sản phẩm</a></li>
-      <li class="px-4"><a class="text-dark no-under" href="">Laptop</a></li>
-      <li class="px-4"><a class="text-dark no-under" href="">Phụ kiện</a></li>
-      <li class="px-4"><a class="text-dark no-under" href="">Linh kiện</a></li>
-      <li class="px-4 dropdown">
-        <a class="text-dark no-under" href="">Tất cả danh mục
+      <li><a class="px-4 text-dark no-under d-block" href="/product">Tất cả sản phẩm</a></li>
+      <li class="updating"><a class="px-4 text-dark no-under d-block" href="#!">Chương trình khuyến mãi</a>
+      </li>
+      <li><a class="px-4 text-dark no-under d-block" href="/post">Bài viết</a></li>
+      <li class="dropdown">
+        <a class="px-4 text-dark no-under d-block" href="#!">Chính sách
           <i style="position:relative;top:2px;" class='bx bx-chevron-down'></i>
         </a>
         <ul class="second_menu">
+          <li class="px-4 updating"><a class="text-dark no-under d-block" href="#!">Chính sách bảo hành</a></li>
+          <li class="px-4 updating"><a class="text-dark no-under d-block" href="#!">Chính sách đổi trả</a></li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <a class="px-4 text-dark no-under d-block" href="#!">Tra cứu
+          <i style="position:relative;top:2px;" class='bx bx-chevron-down'></i>
+        </a>
+        <ul class="second_menu">
+          <li class="px-4 updating"><a class="text-dark no-under d-block" href="#!">Hóa đơn điện tử</a></li>
+          <li class="px-4 updating"><a class="text-dark no-under d-block" href="#!">Thông tin bảo hành</a></li>
         </ul>
       </li>
     </ul>
