--- a/src/resources/views/user/pages/detail.hbs
+++ b/src/resources/views/user/pages/detail.hbs
@@ -120,7 +120,7 @@
         </tr>
       </table>
       <hr>
-      <span class="text-muted mb-1 d-block">Thông tin sản phẩm:</span>
+      <span class="text-muted mb-1 d-block">Cấu hình sản phẩm:</span>
       <table id="detailSpec"></table>
       <hr>
       <div class="row">
@@ -138,11 +138,11 @@
         </div>
         <div class="col-12">
           <div class="product_order px-2" id="need_help">
-            <span class="d-block text-secondary">Cần hỗ trợ? Để lại số điện thoại hoặc email !</span>
+            <span class="d-block text-dark">Cần hỗ trợ? Để lại số điện thoại hoặc email !</span>
             <div>
               <form action="" class="d-flex justify-content-between py-1 mt-2">
                 <input type="text" placeholder="Nhập thông tin liên hệ vào đây...">
-                <button type="submit" class="text-secondary">Xác nhận</button>
+                <button type="submit" class="text-dark">Xác nhận</button>
               </form>
             </div>
           </div>
