--- a/src/resources/views/user/pages/register.hbs
+++ b/src/resources/views/user/pages/register.hbs
@@ -25,8 +25,8 @@
 
               <div class="form-floating mb-3">
                 <label for="floatingPassword">Mật khẩu:</label>
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Nhập mật khẩu !"
-                  name="password" required />
+                <input type="password" autocomplete="new-password" class="form-control" id="floatingPassword"
+                  placeholder="Nhập mật khẩu !" name="password" required />
               </div>
 
               <div class="form-floating mb-3">
@@ -46,11 +46,11 @@
 
               <div class="notif mb-3">
                 <small>
-                  <i> * Tài khoản phải tối thiểu 8 ký tự và không chứa ký tự đặc biệt !</i>
+                  <i> * Tài khoản phải tối thiểu 8 ký tự và không chứa ký tự đặc biệt!</i>
                 </small>
                 <br />
                 <small>
-                  <i>* Mật khẩu phải tối thiểu 8 ký tự, ít nhất 1 số, và 1 chữ thường ! </i>
+                  <i>* Mật khẩu phải tối thiểu 8 ký tự, ít nhất 1 số, và 1 chữ hoa và 1 chữ thường !</i>
                 </small>
               </div>
 
@@ -63,7 +63,7 @@
 
               <hr class="my-4" />
 
-              <a class="d-block text-center mt-2 small" href="/login">Đã có tải khoản? Bấm vào đây để đăng nhập.</a>
+              <a class="d-block text-center mt-2 small" href="/login">Đã có tài khoản? Bấm vào đây để đăng nhập.</a>
             </form>
           </div>
         </div>
