--- a/src/resources/views/user/pages/cart.hbs
+++ b/src/resources/views/user/pages/cart.hbs
@@ -53,7 +53,7 @@
                 </form>
                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
                   <div class="col">Tổng tiền:</div>
-                  <div class="col text-right" id="cart_total_price">0</div>
+                  <div class="col text-right text-danger" style="font-weight: 500;" id="cart_total_price">0 ₫</div>
                 </div> <button class="btn" type="submit" id="checkoutBtn">Đặt hàng</button>
               </form>
             </div>
