--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -105,7 +105,7 @@
     <script src="/assets/js/pcoded.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-    <script src="http://pagination.js.org/dist/2.1.5/pagination.js"></script>
+    <script src="https://pagination.js.org/dist/2.1.5/pagination.js"></script>
 
 </body>
 
