--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -16,7 +16,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="http://pagination.js.org/dist/2.1.5/pagination.js"></script>
+  <script src="https://pagination.js.org/dist/2.1.5/pagination.js"></script>
   <title>V_SHOP</title>
 </head>
 
