--- a/src/resources/views/admin/pages/addnew.hbs
+++ b/src/resources/views/admin/pages/addnew.hbs
@@ -289,4 +289,4 @@
   </div>
 </div>
 <script src="https://cdn.ckeditor.com/ckeditor5/31.0.0/classic/ckeditor.js"></script>
-<script src="/js/addNew.js"></script>
+<script src="/js/addnew.js"></script>
